--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,8 @@
   <link rel="stylesheet" href="{% static 'css/index.css' %}" />
 </head>
 <body>
-    <header><h1>{{ agency.name }}</h1></header>
+    <header><h1>2TheRescue!</h1></header>
     <div id="root"></div>
-        {{ pets|json_script:"pets" }}
         <script src="{% static 'js/index-bundle.js' %}"></script>
       </body>
     </html>
