--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="{% static 'css/index.css' %}" />
 </head>
 <body>
-    <header><h1>2TheRescue!</h1></header>
+    <header><h1>2TheRescue!</h1>
+    <nav></nav>
+    </header>
     <div id="root"></div>
         <script src="{% static 'js/index-bundle.js' %}"></script>
       </body>
