--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,22 @@
+* {
+    box-sizing: border-box; 
+    margin: 0;
+}
+
 body {
     background: black;
     font-family: sans-serif;
     color: white;
+}
+
+header {
+    width: 100%;
+    border-bottom: solid 2px #89DEEF;
+}
+
+footer {
+    width: 100%;
+    border-bottom: solid 2px #89DEEF;
 }
 
 .maincontainer {
@@ -32,4 +47,38 @@ body {
     transform-style: preserve-3d;
     transition: all 1.5s ease;
     cursor: pointer;
+}
+
+.pet-details {
+    display: flex; 
+    flex-direction: column; 
+    /* padding: 5px; */
+    border: none;
+    margin: 10px 2px 10px 0;
+    /* max-width: 310px; */
+    max-width: 30%;
+}
+
+.button {
+	box-shadow: 0px 10px 14px -7px #276873;
+	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+	background-color:#599bb3;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:13px 32px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #3d768a;
+}
+.button:hover {
+	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+	background-color:#408c99;
+}
+.button:active {
+	position:relative;
+	top:1px;
 }
