--- a/templates/petrescue/application.html
+++ b/templates/petrescue/application.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
 {% block content %}
 <h1>{{ dog.name }} </h1>
@@ -14,4 +14,4 @@
 </div>
 </div>
 {% endif %}
-{% endblock %}
+{% endblock %} -->
