--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <header><h1>2TheRescue!</h1>
     <nav></nav>
     </header>
-    <div id="root"></div>
+    <div id="root">{% block content %} {% endblock content %}</div>
         <script src="{% static 'js/index-bundle.js' %}"></script>
       </body>
     </html>
