--- a/templates/petrescue/homepage.html
+++ b/templates/petrescue/homepage.html
@@ -3,9 +3,11 @@
 {% block content %}
 <div class="maincontainer">
   {% for pet in pets %}
+  {{ pet.name }}
+
   <div class="pets-container">
     <div class="pet-card">
-      <a href="{% url 'pet_detail' pk=pet.pk %}"><div class="pet"><span style="font-size: 25px;">{{ pet.name }}</span></div></a></div>
+      <a href="{% url 'get_pet' pk=pet.pk %}"><div class="pet"><span style="font-size: 25px;">{{ pet.name }}</span></div></a></div>
   </div>
   {% endfor %}
 </div>
