--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,21 +4,27 @@
 }
 
 body {
-    background: black;
+    /* background: black; */
     font-family: sans-serif;
-    color: white;
+    /* color: white; */
 }
 
 header {
     width: 100%;
     border-bottom: solid 2px #89DEEF;
+    display: flex;
+    padding: 20px;
 }
 
 footer {
     width: 100%;
     border-bottom: solid 2px #89DEEF;
+    display: flex;
 }
 
+nav {
+    flex-flow: row nowrap;
+}
 .maincontainer {
     display: flex;
     flex-flow: row wrap;
