--- a/templates/petrescue/pet_detail.html
+++ b/templates/petrescue/pet_detail.html
@@ -5,12 +5,12 @@
     <h3>{{ pet.name }}</h3>
     <p>Breed: {{ pet.breed }}</p>
     <p>Age: {{ pet.age }}</p>
-    {{ pet.size }}
-    <!-- {% for tag in tags %}{{ tag.tag }}{% end for %} -->
+    <p>{{ pet.size }}</p>
+    <!-- {% for tag in tags %}{{ tag.tag }}{% endfor %} -->
     <p>{{ pet.description }}</p>
     <!-- {{ pet.vac_status }} -->
     <!-- {{ pet.spay_neuter }} -->
     <p>Date added: {{ pet.date_created }}</p>
-    <a href="{% url '/' %}" class="button">Apply to Adopt!</a>
+    <a href="" class="button">Apply to Adopt!</a>
 </div>
 {% endblock %}
