--- a/static/css/index.css
+++ b/static/css/index.css
@@ -24,6 +24,8 @@ footer {
 
 nav {
     flex-flow: row nowrap;
+    margin: 10px auto;
+    justify-content: center;
 }
 .maincontainer {
     display: flex;
