--- a/templates/petrescue/application.html
+++ b/templates/petrescue/application.html
@@ -11,7 +11,13 @@
       <a href="{% url 'home' %}">Cancel</a>
     </div>
   </form>
+  <form action = "" method = "post">
+    {% csrf_token %}
+    {{form }}
+    <input type="submit" value=Submit">
+</form>
 </div>
 </div>
 {% endif %}
 {% endblock %}
+]
