--- a/static/css/index.css
+++ b/static/css/index.css
@@ -18,14 +18,18 @@ header {
 
 footer {
     width: 100%;
-    border-bottom: solid 2px #89DEEF;
+    border: solid 2px #89DEEF;
     display: flex;
 }
 
 nav {
     flex-flow: row nowrap;
     margin: 10px auto;
-    justify-content: center;
+    justify-content: flex-end;
+}
+
+ul {
+    list-style: none;
 }
 .maincontainer {
     display: flex;
@@ -36,32 +40,21 @@ nav {
 }
 
 .pets-container   {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    /* margin: 15px;
-    margin-bottom: 50px; */
+    flex-flow: row wrap;
+    width: 100%;
+    margin: 10px;
 }
 
 .pet-card   {
-    position: relative;
-    width: 250px;
-    height: 250px;
-    margin: 25px;
-    border-width: 20px;
-    max-width: 350px;
-    text-align: center;
-    align-content: center;
-    border-radius: 15px;
-    transform-style: preserve-3d;
-    transition: all 1.5s ease;
-    cursor: pointer;
+    flex-flow: column nowrap;
+    max-width: 30%;
 }
 
 .pet-details {
     display: flex; 
     flex-direction: column; 
     /* padding: 5px; */
-    border: none;
+    border: 1px solid blue;
     margin: 10px 2px 10px 0;
     /* max-width: 310px; */
     max-width: 30%;
@@ -89,4 +82,14 @@ nav {
 .button:active {
 	position:relative;
 	top:1px;
+}
+
+.pet_detail {
+    flex-flow: column wrap;
+    padding: 5px;
+    border: 1px solid blue;
+}
+
+.homepage_img {
+    max-width: 20%;
 }
