--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,22 +4,7 @@
 }
 
 body {
-    /* background: black; */
     font-family: sans-serif;
-    /* color: white; */
-}
-
-header {
-    width: 100%;
-    border-bottom: solid 2px #89DEEF;
-    display: flex;
-    padding: 20px;
-}
-
-footer {
-    width: 100%;
-    border: solid 2px #89DEEF;
-    display: flex;
 }
 
 nav {
@@ -28,14 +13,11 @@ nav {
     justify-content: flex-end;
 }
 
-ul {
-    list-style: none;
-}
 .maincontainer {
     display: flex;
     flex-flow: row wrap;
     margin: 10px;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     padding: 50px;
 }
 
@@ -48,14 +30,16 @@ ul {
 .pet-card   {
     flex-flow: column nowrap;
     max-width: 30%;
+    padding: 10px;
+    margin: 5px;
 }
 
 .pet-details {
     display: flex; 
     flex-direction: column; 
-    /* padding: 5px; */
+    padding: 5px;
     border: 1px solid blue;
-    margin: 10px 2px 10px 0;
+    margin: 10px;
     /* max-width: 310px; */
     max-width: 30%;
 }
@@ -84,10 +68,12 @@ ul {
 	top:1px;
 }
 
-.pet_detail {
-    flex-flow: column wrap;
-    padding: 5px;
-    border: 1px solid blue;
+.pet-detail {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 10px;
+    justify-content: space-around;
+    padding: 50px;
 }
 
 .homepage_img {
