--- a/templates/base.html
+++ b/templates/base.html
@@ -6,23 +6,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2therescue</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
   <link rel="stylesheet" href="{% static 'css/index.css' %}" />
 </head>
 <body>
-    <header><h1>2TheRescue!</h1>
-    <nav>
-      <a href="{% url 'list_pets' %}">Available Pets</a> |
-      <a href="">About Us</a>
-    </nav>
+    <div class="container-fluid"><header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <a href="" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none"><h1>2TheRescue!</h1></a>
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="{% url 'list_pets' %}" class="nav-link" aria-current="page">Available Pets</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
+      </ul>
     </header>
+  <div class="container">
     {% block content %}{% endblock content %}
-    <footer>
-      <p>{{ agency.name }}</p>
-      <p>{{ agency.phoneNumber }}</p>
-    </footer>
-        <script src="{% static 'js/index-bundle.js' %}"></script>
-      </body>
-    </html>
+  </div>
+      <footer class="footer mt-auto d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <ul class="list-unstyled">
+        <li>{{ agency.name }}</li>
+        <li>{{ agency.phoneNumber }}</li>
+      </ul>
+      </footer>
+    </div>
+    <script src="{% static 'js/index-bundle.js' %}"></script>
+  </body>
+</html>
     
 </body>
 </html>
