--- a/templates/petrescue/homepage.html
+++ b/templates/petrescue/homepage.html
@@ -1,24 +1,25 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<div class="maincontainer">
-  <h4>Click on a dog below for more details or to apply to adopt!</h4>
-  {% for pet in pets %}
-  <div class="pets-container">
-    <div class="pet-card">
-      <a href="{% url 'get_pet' pk=pet.pk %}">
-        <div class="pet-details">
-          <img class="homepage_img" src="media/{{ pet.pet_photo }}" />
-          <span style="font-size: 25px;">{{ pet.name }}</span></a>
-          <ul>
+  <p class="lead">Click on a dog below for more details or to apply to adopt!</p>
+  <ul class="list-unstyled list-inline">
+    {% for pet in pets %}
+    <li class="list-inline-item"><div class="card" style="width: 18rem;">
+    <a href="{% url 'get_pet' pk=pet.pk %}"><img src="media/{{ pet.pet_photo }}" class="card-img-top img-thumbnail" alt="photo-of-{{pet.name}}"></a>
+    <div class="card-body">
+      <h5 class="card-title"><a href="{% url 'get_pet' pk=pet.pk %}">{{ pet.name }}</a></h5>
+          <ul class="list-unstyled">
             <li>Age: {{ pet.age }}</li>
+            <li>Sex: {{ pet.animal_sex }}</li>
+            <li>Size: {{ pet.size }}</li>
+            <li>Breed: {{ pet.breed }}</li>
           </ul>
         </div>
       </div>
-    </div>
-  </div>
+    </li>
+    
   {% endfor %}
-</div>
+</ul>
 {% endblock %}
 
 
