Deleted reference to pk for agency_detail url and view and now the info is loading correctly to the contact_us page

--- a/templates/petrescue/pet_detail.html
+++ b/templates/petrescue/pet_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
 <div class="pet-detail">
     <img src="media/{{ pet.pet_photo }}" />
