--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
       <a href="" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none"><h1>2TheRescue!</h1></a>
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="{% url 'list_pets' %}" class="nav-link" aria-current="page">Available Pets</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
+        <li class="nav-item"><a href="{% url 'agency_detail' %}" class="nav-link">About Us</a></li>
       </ul>
     </header>
   <div class="container">
