Updated styling and accessibility for images and lists in templates. Updated pets_ list view to include agency info

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
   <div class="container">
     {% block content %}{% endblock content %}
   </div>
-      <footer class="footer mt-auto d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <footer class="footer mt-auto d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
       <ul class="list-unstyled">
         <li>{{ agency.name }}</li>
         <li>{{ agency.phoneNumber }}</li>
