--- a/static/css/index.css
+++ b/static/css/index.css
@@ -59,6 +59,7 @@ nav {
 	text-decoration:none;
 	text-shadow:0px 1px 0px #3d768a;
 }
+
 .button:hover {
 	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
 	background-color:#408c99;
@@ -77,5 +78,16 @@ nav {
 }
 
 .homepage_img {
-    max-width: 20%;
+    height: 18rem;
+    object-fit: cover;
+}
+
+.homepage_card {
+    margin: 10px;
+    width: 18rem;
+    cursor: pointer;
+}
+
+.homepage_card:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
