Updated the media url and static url in settings.py to correctly bring in the static library and fix our css issues caused by aws implementation.  Added info to AppForm view to connect an application to a specific dog. Updated urls.py to try to update media storage and updated application_submitted.html to add basic text to confirm a successful submission

--- a/templates/petrescue/application.html
+++ b/templates/petrescue/application.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div>
-  <form action="{% url 'application' %}" method="POST">
+  <form action="{% url 'application' pk=pet.pk %}" method="POST">
     {{ form }}
     <div>
       <button type="submit">Apply</button>
