--- a/templates/petrescue/application_submitted.html
+++ b/templates/petrescue/application_submitted.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
-<div class="maincontainer">
-    
-</div>
+<h3>Your application has been successfully submitted!</h3>
 {% endblock %}
