Setup admin templates and updated pet detail page

--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<div class="maincontainer">
-</div>
+<h1>Login Page</h1>
 {% endblock %}
