--- a/templates/petrescue/homepage.html
+++ b/templates/petrescue/homepage.html
@@ -6,7 +6,7 @@
     {% for pet in pets %}
     <li class="list-inline-item">
       <a href="{% url 'get_pet' pk=pet.pk %}"><div class="card homepage_card">
-    <img src="{{ pet.pet_photo.url }}" class="card-img-top img-thumbnail homepage_img" alt="photo-of-{{pet.name}}">
+    <img src="{{ pet.photo.url }}" class="card-img-top img-thumbnail homepage_img" alt="photo-of-{{pet.name}}">
     <div class="card-body">
       <h5 class="card-title">
         <a href="{% url 'get_pet' pk=pet.pk %}">{{ pet.name }}</a></h5>
@@ -14,7 +14,7 @@
             <dt class="col-sm-3">Age</dt>
             <dd class="col-sm-9">{{ pet.age }}</dd>
             <dt class="col-sm-3">Sex</dt>
-            <dd class="col-sm-9">{{ pet.animal_sex }}</dd>
+            <dd class="col-sm-9">{{ pet.sex }}</dd>
             <dt class="col-sm-3">Size</dt>
             <dd class="col-sm-9">{{ pet.size }}</dd>
             <dt class="col-sm-3">Breed</dt>
