--- a/templates/admin/application_detail.html
+++ b/templates/admin/application_detail.html
@@ -5,4 +5,5 @@
 <h1>Review the application and update the status below!</h1>
 {% else %}
 <h1>Please log in to view this page.</h1>
+{% endif %}
 {% endblock %}
