--- a/templates/admin/agency.html
+++ b/templates/admin/agency.html
@@ -2,8 +2,18 @@
 {% load static %}
 {% block content %}
 {% if request.user.is_authenticated %}
-<h1>Add your agency details below!</h1>
-{% else %}
-<h1>Please log in to view this page.</h1>
-{% endif %}
+<h1>Update your rescue organization contact info and details below!</h1>
+<div>
+    <form action="{% url 'agency' pk=agency.pk %}" method="POST">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <div>
+        <button type="submit">Submit Card</button>
+        <a href="{% url 'home' %}">Cancel</a>
+      </div>
+    </form>
+  </div>
+  {% else %}
+  <h1>Please <a href="/accounts/login/">login</a> to view this page.</h1>
+  {% endif %}
 {% endblock %}
