--- a/templates/petrescue/pet_detail.html
+++ b/templates/petrescue/pet_detail.html
@@ -21,5 +21,5 @@
         <dd class="col-sm-9">{{ pet.date_created }}</dd>
     </dl>
 </div>
-<a href="{% url 'application' pk=pet.pk %}" class="button">Apply to Adopt!</a>
+<a href="{% url 'application' %}" class="button">Apply to Adopt!</a>
 {% endblock %}
