Fixed login issue and other changes to templates

--- a/templates/admin/application_detail.html
+++ b/templates/admin/application_detail.html
@@ -2,7 +2,14 @@
 {% load static %}
 {% block content %}
 {% if request.user.is_authenticated %}
-<h1>Review the application and update the status below!</h1>
+<h1>Review the application and update the status below!</h1>  
+<form action="{% url 'application' %}" method="PATCH">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <div>
+      <button type="submit">Apply changes</button>
+    </div>
+</form>
 {% else %}
 <h1>Please log in to view this page.</h1>
 {% endif %}
