--- a/templates/admin/pet_list.html
+++ b/templates/admin/pet_list.html
@@ -3,9 +3,9 @@
 {% block content %}
 {% if request.user.is_authenticated %}
 <h1>Review your list of pets below!</h1>
-
+<ul class="list-unstyled list-inline">
     {% for pet in pets %}
-    <a href="{% url 'get_pet' pk=pet.pk %}">
+    <li><a href="{% url 'get_pet' pk=pet.pk %}">
         <ul class="list-unstyled list-inline">
             <li class="list-inline-item"><img src="{{ pet.photo.url }}" class="img-thumbnail" alt="photo-of-{{pet.name}}"></li>
             <li>{{ pet.name }}</li>
@@ -14,8 +14,9 @@
             <li>{{ pet.size }}</li>
             <li>{{ pet.breed }}</li>
           </ul>
-        </a>
+        </a></li>
     {% endfor %}
+</ul>   
     {% else %}
     <h1>Please <a href="/accounts/login/">login</a> to view this page.</h1>
     {% endif %}
