--- a/templates/petrescue/application.html
+++ b/templates/petrescue/application.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <div>
-  <form action="{% url 'application'}" method="POST">
+  <form action="{% url 'application' %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <div>
