--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,31 +1,48 @@
-* {
-    box-sizing: border-box; 
-    margin: 0;
-}
-
-body {
+html {
     font-family: sans-serif;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: inherit;
+}
+
+body {
+    max-width: 60rem;
+    margin: 0 auto;
+    padding: 1rem;
+}
+
+h1 {
+    margin-bottom: 1rem;
+}
+
+body.admin {
+    background-color: #035e7b;
+    color: white;
+}
+/* 
 nav {
     flex-flow: row nowrap;
     margin: 10px auto;
     justify-content: flex-end;
-}
+} */
 
-.maincontainer {
+/* .maincontainer {
     display: flex;
     flex-flow: row wrap;
     margin: 10px;
-    /* justify-content: space-around; */
+    /* justify-content: space-around;
     padding: 50px;
-}
+} */
 
-.pets-container   {
+/* .pets-container   {
     flex-flow: row wrap;
     width: 100%;
     margin: 10px;
-}
+} */
 
 .pet-card   {
     flex-flow: column nowrap;
@@ -44,7 +61,12 @@ nav {
     max-width: 30%;
 }
 
-.button {
+.pet-photo {
+    max-width: 300px;
+    max-height: auto;
+}
+
+button {
 	box-shadow: 0px 10px 14px -7px #276873;
 	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
 	background-color:#599bb3;
@@ -60,11 +82,11 @@ nav {
 	text-shadow:0px 1px 0px #3d768a;
 }
 
-.button:hover {
+button:hover {
 	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
 	background-color:#408c99;
 }
-.button:active {
+button:active {
 	position:relative;
 	top:1px;
 }
@@ -77,17 +99,99 @@ nav {
     padding: 50px;
 }
 
-.homepage_img {
+.homepage-img {
     height: 18rem;
     object-fit: cover;
 }
 
-.homepage_card {
+.homepage-card {
     margin: 10px;
     width: 18rem;
     cursor: pointer;
 }
 
-.homepage_card:hover {
-    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+.card:hover, .card:focus-within {
+    box-shadow: 0 0 0 0.25rem rgba(0, 139, 186, 0.393);
+}
+
+.cards > ul {
+    list-style: none;
+}
+
+.card + .card {
+    margin-top: 1.5rem;
+}
+
+@supports (display: grid) {
+    .cards > ul {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+        grid-column-gap: 1.5rem;
+        grid-row-gap:1.5rem;
+    }
+
+    .card + .card {
+        margin-top: 0;
+    }
+}
+
+.card {
+    border: 1px solid;
+    border-radius: 0.25rem;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.card .text {
+    padding: 1rem;
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.card p {
+    max-width: 60ch;
+}
+
+.card .img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* filter: grayscale(100%); */
+}
+
+.card a {
+    text-decoration: none;
+}
+
+.card a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.card a:focus {
+    outline: none;
+    text-decoration: underline;
+}
+
+.card:focus-within a:focus {
+    text-decoration: none;
+}
+
+.card small {
+    display: block;
+}
+
+.card .text > * + * {
+    margin-top: 0.75rem;
+}
+
+.card .text > :last-child {
+    margin-top: auto;
+    padding-top: 0.75rem;
 }
