--- a/templates/base.html
+++ b/templates/base.html
@@ -4,26 +4,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable+yes">
   <title>2therescue</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">   -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link rel="stylesheet" href="{% static 'css/index.css' %}" />
 </head>
 <body>
-    <div class="container-fluid"><header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none"><h1>2TheRescue!</h1></a>
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="{% url 'list_pets' %}" class="nav-link" aria-current="page">Available Pets</a></li>
-        <li class="nav-item"><a href="{% url 'agency_detail' %}" class="nav-link">About Us</a></li>
-      </ul>
+    <header>
+      <nav class="navbar" ><a href="" ><h1>{{ agency.name }}</h1></a>
+      <ul>
+        <li><a href="{% url 'list_pets' %}" >Available Pets</a></li>
+        <li><a href="{% url 'agency_detail' %}" >About Us</a></li>
+      </ul></nav>
     </header>
   <div class="container">
     {% block content %}{% endblock content %}
   </div>
-      <footer class="footer mt-auto d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
+      <footer>
       <ul class="list-unstyled">
-        <li>{{ agency.name }}</li>
-        <li>{{ agency.phoneNumber }}</li>
+        <li><i class="fas fa-paw"></i>{{ agency.name }}</li>
+        <li><i class="fas fa-paw"></i>{{ agency.phone }}</li>
       </ul>
       </footer>
     </div>
