--- a/templates/petrescue/homepage.html
+++ b/templates/petrescue/homepage.html
@@ -2,29 +2,57 @@
 {% load static %}
 {% block content %}
   <p class="lead">Click on a dog below for more details or to apply to adopt!</p>
+  <div class="cards">
   <ul class="list-unstyled list-inline">
     {% for pet in pets %}
     <li class="list-inline-item">
-      <a href="{% url 'get_pet' pk=pet.pk %}"><div class="card homepage_card">
-    <img src="{{ pet.photo.url }}" class="card-img-top img-thumbnail homepage_img" alt="photo-of-{{pet.name}}">
-    <div class="card-body">
-      <h5 class="card-title">
-        <a href="{% url 'get_pet' pk=pet.pk %}">{{ pet.name }}</a></h5>
-          <dl class="row">
-            <dt class="col-sm-3">Age</dt>
-            <dd class="col-sm-9">{{ pet.age }}</dd>
-            <dt class="col-sm-3">Sex</dt>
-            <dd class="col-sm-9">{{ pet.sex }}</dd>
-            <dt class="col-sm-3">Size</dt>
-            <dd class="col-sm-9">{{ pet.size }}</dd>
+      <div class="card homepage-card">
+        <img src="{{ pet.photo.url }}" class="card-img-top img-thumbnail homepage-img" alt="photo-of-{{pet.name}}">
+          <div class="card-body tags">
+            <ul>
+              <li class="tags">{{ pet.sex }}</li>
+              <li class="tags">{{ pet.age_group }}</li>
+              <li class="tags">{{ pet.size }}</li>
+              {% if pet.heart_worm_positive == True %}<li class="tags">{{ pet.heart_worm_positive }}</li>
+              {% else %}{% endif %}
+            </ul>
+          </div>
+          <div class="card-body text">
+            <h2 class="card-title"><a href="{% url 'get_pet' pk=pet.pk %}">{{ pet.name }}</a></h2>
+            
+          <dl>
             <dt class="col-sm-3">Breed</dt>
             <dd class="col-sm-9">{{ pet.breed }}</dd>
+            <dt>Age</dt>
+            <dd>{{ pet.age }}</dd>
+            <dt class="col-sm-3">Weight: </dt>
+            <dd class="col-sm-9">{{ pet.size }}</dd>
           </dl>
         </div>
-      </div></a>
+      </div>
     </li>
   {% endfor %}
 </ul>
+</div>
 {% endblock %}
+{{ pet.name }}
+{{ pet.breed }}
+{{ pet.age }}
+{{ pet.weight }}
+{{ pet.description }}
+{{ pet.spay_neuter }}
+{{ pet.health_notes }}
+{{ pet.notes }}
+{{ pet.date_created }}
+{{ pet.date_updated }}
+{{ pet.status }}
+{{ pet.sex }}
+{{ pet.age_group }}
+{{ pet.size }}
+{{ pet.good_with_kids }}
+{{ pet.good_with_dogs }}
+{{ pet.good_with_cats }}
+{{ pet.heart_worm_positive }}
+{{ pet.health_issues }}
 
 
