--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,13 +10,17 @@ html {
 }
 
 body {
-    max-width: 60rem;
+    /* max-width: 60rem; */
     margin: 0 auto;
     padding: 1rem;
 }
 
 h1 {
     margin-bottom: 1rem;
+}
+
+h2 {
+    font-size: 1rem;
 }
 
 body.admin {
@@ -44,7 +48,10 @@ nav {
     margin: 10px;
 } */
 
-.pet-card   {
+header a {
+    text-decoration: none;
+}
+/* .pet-card   {
     flex-flow: column nowrap;
     max-width: 30%;
     padding: 10px;
@@ -57,16 +64,16 @@ nav {
     padding: 5px;
     border: 1px solid blue;
     margin: 10px;
-    /* max-width: 310px; */
+    /* max-width: 310px;
     max-width: 30%;
-}
+} */
 
 .pet-photo {
     max-width: 300px;
     max-height: auto;
 }
 
-button {
+.button {
 	box-shadow: 0px 10px 14px -7px #276873;
 	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
 	background-color:#599bb3;
@@ -82,33 +89,33 @@ button {
 	text-shadow:0px 1px 0px #3d768a;
 }
 
-button:hover {
+.button:hover {
 	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
 	background-color:#408c99;
 }
-button:active {
+.button:active {
 	position:relative;
 	top:1px;
 }
 
-.pet-detail {
+/* .pet-detail {
     display: flex;
     flex-flow: row wrap;
     margin: 10px;
     justify-content: space-around;
     padding: 50px;
-}
+} */
 
 .homepage-img {
-    height: 18rem;
+    height: 15rem;
     object-fit: cover;
 }
 
-.homepage-card {
+/* .homepage-card {
     margin: 10px;
     width: 18rem;
     cursor: pointer;
-}
+} */
 
 .card:hover, .card:focus-within {
     box-shadow: 0 0 0 0.25rem rgba(0, 139, 186, 0.393);
@@ -116,6 +123,7 @@ button:active {
 
 .cards > ul {
     list-style: none;
+    display: flex;
 }
 
 .card + .card {
@@ -136,23 +144,24 @@ button:active {
 }
 
 .card {
-    border: 1px solid;
     border-radius: 0.25rem;
     display: flex;
     flex-direction: column;
     position: relative;
+    word-wrap: normal;
 }
 
 .card .text {
-    padding: 1rem;
+    padding-left: .5rem;
     flex: 1 0 auto;
     display: flex;
-    flex-direction: column;
+    flex-flow: column nowrap;
+    font-size: 1rem;
 }
 
-.card p {
+/* .card p {
     max-width: 60ch;
-}
+} */
 
 .card .img img {
     width: 100%;
@@ -191,7 +200,31 @@ button:active {
     margin-top: 0.75rem;
 }
 
-.card .text > :last-child {
+/* .card .text > :last-child {
     margin-top: auto;
     padding-top: 0.75rem;
+}  */
+
+.navbar-item:hover {
+    background-color: #035d7b41 !important;
+}
+
+.tags {
+    /* margin-bottom: .15rem; */
+    max-height: 60px;
+}
+
+/* .tags:not(:last-child) {
+    margin-bottom: 0;
+} */
+
+dt {
+    margin-right: .5rem;
+}
+dd {
+    margin-right: 0;
+}
+
+p {
+    margin: 3rem;
 }
