--- a/templates/admin/pet_list.html
+++ b/templates/admin/pet_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "staff_base.html" %}
 {% load static %}
 {% block content %}
 {% if request.user.is_authenticated %}
