--- a/templates/petrescue/homepage.html
+++ b/templates/petrescue/homepage.html
@@ -8,25 +8,25 @@
     <li class="list-inline-item">
       <div class="card homepage-card">
         <img src="{{ pet.photo.url }}" class="card-img-top img-thumbnail homepage-img" alt="photo-of-{{pet.name}}">
-          <div class="card-body tags">
-            <ul>
-              <li class="tags">{{ pet.sex }}</li>
-              <li class="tags">{{ pet.age_group }}</li>
-              <li class="tags">{{ pet.size }}</li>
-              {% if pet.heart_worm_positive == True %}<li class="tags">{{ pet.heart_worm_positive }}</li>
+          <div class="card-body">
+            <div class="tags">
+            <ul class="list-inline">
+              <li class="list-inline-item"><span class="tag">{{ pet.sex }}</span></li>
+              <li class="list-inline-item"><span class="tag">{{ pet.age_group }}</span></li>
+              <li class="list-inline-item"><span class="tag">{{ pet.size }}</span></li>
+              {% if pet.heart_worm_positive or pet.health_concerns %}<li class="list-inline-item"><span class="tag">Health Issues</span></li>
               {% else %}{% endif %}
             </ul>
           </div>
           <div class="card-body text">
             <h2 class="card-title"><a href="{% url 'get_pet' pk=pet.pk %}">{{ pet.name }}</a></h2>
-            
-          <dl>
+          <dl class="row">
             <dt class="col-sm-3">Breed</dt>
             <dd class="col-sm-9">{{ pet.breed }}</dd>
-            <dt>Age</dt>
-            <dd>{{ pet.age }}</dd>
-            <dt class="col-sm-3">Weight: </dt>
-            <dd class="col-sm-9">{{ pet.size }}</dd>
+            <dt class="col-sm-3">Age</dt>
+            <dd class="col-sm-9">{{ pet.age }}</dd>
+            <dt class="col-sm-3">Weight</dt>
+            <dd class="col-sm-9">{{ pet.weight }}</dd>
           </dl>
         </div>
       </div>
