fixed syntax error in staff_base.html, and updated pet_detail.html to include all of the fields even though its not styled yet.

--- a/templates/petrescue/homepage.html
+++ b/templates/petrescue/homepage.html
@@ -14,7 +14,7 @@
               <li class="list-inline-item"><span class="tag">{{ pet.sex }}</span></li>
               <li class="list-inline-item"><span class="tag">{{ pet.age_group }}</span></li>
               <li class="list-inline-item"><span class="tag">{{ pet.size }}</span></li>
-              {% if pet.heart_worm_positive or pet.health_concerns %}<li class="list-inline-item"><span class="tag">Health Issues</span></li>
+              {% if pet.heartworm_positive or pet.health_concerns %}<li class="list-inline-item"><span class="tag">Health Issues</span></li>
               {% else %}{% endif %}
             </ul>
           </div>
