Figured out how to filter views based on an OR operator so I filtered the end user view of dogs to not show adopted pets, and figured out how to get my data in a table via a for loop. I wish git would let me add exclamation points to these FREAKING MESSAGES

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -22,11 +22,11 @@ h1 {
 h2 {
     font-size: 1rem;
 }
-
-body.admin {
+header.admin {
     background-color: #035e7b;
     color: white;
 }
+
 /* 
 nav {
     flex-flow: row nowrap;
