--- a/templates/staff/home.html
+++ b/templates/staff/home.html
@@ -2,7 +2,12 @@
 {% load static %}
 {% block content %}
 {% if request.user.is_authenticated %}
-<h1>Homepage</h1>
+<h1>Welcome home!</h1>
+<ul class="list-unstyled list-inline">
+    <li class="list-inline-item"><a class="navbar-item" href="{% url 'pet_list' %}" >Pets</a></li>
+    <li class="list-inline-item"><a class="navbar-item" href="{% url 'applications' %}" >Applications</a></li>
+    <li class="list-inline-item"><a class="navbar-item" href="{% url 'agency' %}" >Rescue info</a></li>
+</ul> 
 {% else %}
 <h1>Please <a href="/accounts/login/">login</a> to view this page.</h1>
 {% endif %}
