Got the footer and header rendering in every view. I feel like there is a much easier way to do it, but I can't think of what it is right now, so I'm just gonna do it this way. I also fixed a couple of the page links and stuff.

--- a/templates/staff/application_list.html
+++ b/templates/staff/application_list.html
@@ -17,7 +17,7 @@
             <tbody>
     {% for application in applications %}
             <tr>
-            <a href="{% url 'get_pet' pk=pet.pk %}">
+            <a href="{% url 'application_detail' pk=application.pk %}">
             <td>{{ applicant.status }}</td>
             <td>{{ applicant.pet_id }}</td>
             <td>{{ applicant.name }}</td>
