--- a/templates/petrescue/application.html
+++ b/templates/petrescue/application.html
@@ -4,10 +4,34 @@
 <div>
   <form action="{% url 'application' %}" method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% for field in form %}
+    <div class="fieldWrapper">
+      {{ field.errors }}
+      {{ field.label_tag }} {{ field }}
+      {% if field.help_text %}
+      <p class="help">{{ field.help_text|safe }}</p>
+      {% endif %}
+  </div>
+{% endfor %}
     <div>
       <button type="submit">Apply</button>
     </div>
   </form>
 </div>
+
 {% endblock %}
+
+
+
+
+<!-- notes 
+{% for field in form %}
+    <div class="fieldWrapper">
+        {{ field.errors }}
+        {{ field.label_tag }} {{ field }}
+        {% if field.help_text %}
+        <p class="help">{{ field.help_text|safe }}</p>
+        {% endif %}
+    </div>
+{% endfor %}
+-->
