Finally got the edit pet details functionality to worrrrrrrk EXCLAMATION POINTTTTSSSSSS. Also added a model_fields.md file to help me track my template tags while im working and added it to my gitignore file

--- a/templates/staff/application_list.html
+++ b/templates/staff/application_list.html
@@ -8,10 +8,10 @@
       <tr>
             <th>Status</th>
             <th>Pet Name</th>
-            <th>Name</th>
-            <th>Phone</th>
-            <th>Email</th>
-            <th>Date Added</th>
+            <th>Applicant Name</th>
+            <th>Applicant Phone</th>
+            <th>Applicant Email</th>
+            <th>Date Submitted</th>
             </tr>
             </thead>
             <tbody>
