--- a/templates/staff/pet_detail.html
+++ b/templates/staff/pet_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <div>
-  <form action="{% url 'pet_detail' %}" method="POST">
+  <form action="{% url 'admin_pet_detail' pk=pet.pk %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <div>
