--- a/templates/petrescue/application.html
+++ b/templates/petrescue/application.html
@@ -1,20 +1,27 @@
 {% extends "base.html" %}
+
 {% load static %}
 {% block content %}
 <div>
-  <form action="{% url 'application' %}" method="POST">
+  <form class= "column" action="{% url 'application' %}" method="POST">
     {% csrf_token %}
     {% for field in form %}
-    <div class="fieldWrapper">
+    
+    <div class="field">
       {{ field.errors }}
-      {{ field.label_tag }} {{ field }}
+      <label class="label">
+        {{ field.label_tag }}
+      </label>
+      <div>
+        {{ field }}
+      </div>
       {% if field.help_text %}
       <p class="help">{{ field.help_text|safe }}</p>
       {% endif %}
   </div>
 {% endfor %}
     <div>
-      <button type="submit">Apply</button>
+      <button class="button is-info" type="submit">Apply</button>
     </div>
   </form>
 </div>
@@ -23,15 +30,3 @@
 
 
 
-
-<!-- notes 
-{% for field in form %}
-    <div class="fieldWrapper">
-        {{ field.errors }}
-        {{ field.label_tag }} {{ field }}
-        {% if field.help_text %}
-        <p class="help">{{ field.help_text|safe }}</p>
-        {% endif %}
-    </div>
-{% endfor %}
--->
