--- a/templates/petrescue/homepage.html
+++ b/templates/petrescue/homepage.html
@@ -4,6 +4,10 @@
   <p class="lead">Click on a dog below for more details or to apply to adopt!</p>
   <div class="cards">
   <ul class="list-unstyled list-inline">
+    <form action={% url 'search_by_sex_or_age_size' %} method="GET">
+      <input type="text" name="q" placeholder="Search by age, sex or size">
+      <button type="submit" >Search</button>
+    </form>
     {% for pet in pets %}
     <li class="list-inline-item">
       <div class="card homepage-card">
