--- a/templates/staff/pet_list.html
+++ b/templates/staff/pet_list.html
@@ -35,8 +35,8 @@
     <h1>Please <a href="/accounts/login/">log in</a> to view this page.</h1>
     {% endif %}
 
-    <div>
-        <a href="{% url 'get_pet' pk=pet.pk %}"></a>
-        <button class="button is-info"  type="submit">Add Pet</button>
-    </div>
+
+        <div id="application"><a href="{% url 'add_pet' %}" class="button is-info">Add Pet!</a></div>
+        
+    
 {% endblock %}
