got image upload to work correctly on edit and add pet for logged in user.

--- a/templates/petrescue/pet_detail.html
+++ b/templates/petrescue/pet_detail.html
@@ -44,6 +44,6 @@
     </dl>
     </div>
 </div>
-<div id="application"><a href="{% url 'application' %}" class="button">Apply to Adopt!</a></div>
+<div id="application-button"><a href="{% url 'application' %}" class="button">Apply to Adopt!</a></div>
 
 {% endblock %}
