--- a/templates/staff/add_pet.html
+++ b/templates/staff/add_pet.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% block content %}
 <div>
-  <form action="{% url 'admin_pet_detail' pk=pet.pk %}" method="POST" enctype="multipart/form-data">
+  <form action="{% url 'add_pet' %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <div>
-      <button type="submit">Update</button>
+      <button type="submit">Add</button>
     </div>
   </form>
 </div>
