--- a/templates/staff_base.html
+++ b/templates/staff_base.html
@@ -17,22 +17,23 @@
       <div class="navbar-brand">
       <a class="navbar-item" href="{% url 'home' %}">
         <h1 class="title">{{ agency.name }} </h1>
-        <h2 class="subtitle">2TheRescue!</h2>
+      </a>
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
       </a>
     </div>
-    <div class="navbar-menu">
+    <div id="navMenu" class="navbar-menu">
       <div class="navbar-start">
-       <ul class="list-unstyled list-inline">
-        <li class="list-inline-item"><a class="navbar-item" href="{% url 'pet_list' %}" >Pets</a></li>
-        <li class="list-inline-item"><a class="navbar-item" href="{% url 'applications' %}" >Applications</a></li>
-        <li class="list-inline-item"><a class="navbar-item" href="{% url 'agency' %}" >Rescue info</a></li>
-        </ul> 
-      </div>
+        <a class="navbar-item" href="{% url 'pet_list' %}" >Pets</a>
+        <a class="navbar-item" href="{% url 'applications' %}" >Applications</a>
+        <a class="navbar-item" href="{% url 'agency' %}" >Rescue info</a>
+        </div>
       <div class="navbar-end">
         {% if request.user.is_authenticated %}
-        <ul class="list-unstyled list-inline">
-          <li class="list-inline-item"><a class="navbar-item" href="{% url 'list_pets' %}" >View Site </a></li>|
-          <li class="list-inline-item"><a class="navbar-item" href="/accounts/logout/"> Logout</a></li></ul>
+          <a class="navbar-item" href="{% url 'list_pets' %}" >Preview Site </a>
+          <a class="navbar-item" href="/accounts/logout/"> Logout</a>
         {% else %}
         <a class="navbar-item" href="/accounts/login/">Login</a>
         {% endif %}
@@ -44,10 +45,7 @@
     {% block content %}{% endblock content %}
   </div>
   <footer class="footer mt-auto d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
-    <ul class="list-unstyled">
-        <li><i class="fas fa-paw"></i>{{ agency.name }}</li>
-        <li><i class="fas fa-paw"></i>{{ agency.phone }}</li>
-      </ul>
+    <h2 class="subtitle">2TheRescue!</h2>
     <script src="{% static 'js/index-bundle.js' %}"></script>
   </body>
 </html>
