--- a/templates/staff/application_detail.html
+++ b/templates/staff/application_detail.html
@@ -2,10 +2,12 @@
 {% load static %}
 {% block content %}
 {% if request.user.is_authenticated %}
-<h1>Review the application and update the status below!</h1>  
-<form action="{% url 'application' %}" method="PATCH">
+<h1>Review the application and update the status below!</h1> 
+  
+
+<form action="{% url 'application' %}" method="POST">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_p }}
     <div>
       <button type="submit">Apply changes</button>
     </div>
