ALSO GOT THE APPLICATION DETAILS TO WORRRRK

--- a/templates/staff/application_detail.html
+++ b/templates/staff/application_detail.html
@@ -5,7 +5,7 @@
 <h1>Review the application and update the status below!</h1> 
   
 
-<form action="{% url 'application' %}" method="POST">
+<form action="{% url 'application_detail' pk=applicant.pk %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <div>
