--- a/static/css/staff.css
+++ b/static/css/staff.css
@@ -1,5 +1,6 @@
 html {
     font-family: sans-serif;
+    text-rendering: optimizeLegibility;
 }
 
 * {
@@ -19,10 +20,267 @@ h1 {
     margin-bottom: 1rem;
 }
 
+.title {
+    color: white !important;
+}
+
 h2 {
     font-size: 1rem;
+    color: #05042b;
 }
-header.admin {
-    background-color: #035e7b;
+header {
+    /* background-color: #000cb8; */
     color: white;
+    /* padding: 3rem 1.5rem; */
+    /* box-shadow: 0px 10px 14px -7px #124E78; */
+    /* box-shadow: inset 10px 10px 14px -10px #59C3C3; */
 }
+
+/* 
+nav {
+    flex-flow: row nowrap;
+    margin: 10px auto;
+    justify-content: flex-end;
+} */
+
+/* .maincontainer {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 10px;
+    /* justify-content: space-around;
+    padding: 50px;
+} */
+
+/* .pets-container   {
+    flex-flow: row wrap;
+    width: 100%;
+    margin: 10px;
+} */
+
+header a {
+    text-decoration: none;
+}
+/* .pet-card   {
+    flex-flow: column nowrap;
+    max-width: 30%;
+    padding: 10px;
+    margin: 5px;
+}
+
+.pet-details {
+    display: flex; 
+    flex-direction: column; 
+    padding: 5px;
+    border: 1px solid blue;
+    margin: 10px;
+    /* max-width: 310px;
+    max-width: 30%;
+} */
+
+.pet-photo {
+    max-width: 300px;
+    max-height: auto;
+}
+
+.button {
+	box-shadow: 0px 10px 14px -7px #276873;
+	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+	background-color:#599bb3;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:13px 32px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #3d768a;
+}
+/* 
+.button {
+    background-color: #fff;
+    border-color: #dbdbdb;
+    border-width: 1px;
+    color: #363636;
+    cursor: pointer;
+    justify-content: center;
+    padding-bottom: calc(0.5em - 1px);
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: calc(0.5em - 1px);
+    text-align: center;
+    white-space: nowrap;
+}
+.button:hover {
+	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+	background-color:#408c99;
+}
+.button:active {
+	position:relative;
+	top:1px;
+} */
+
+/* .pet-detail {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 10px;
+    justify-content: space-around;
+    padding: 50px;
+} */
+
+.homepage-img {
+    height: 15rem;
+    object-fit: cover;
+}
+
+/* .homepage-card {
+    margin: 10px;
+    width: 18rem;
+    cursor: pointer;
+} */
+
+.card:hover, .card:focus-within {
+    box-shadow: 0 0 0 0.25rem rgba(0, 139, 186, 0.393);
+}
+
+.cards > ul {
+    list-style: none;
+    display: flex;
+}
+
+.card + .card {
+    margin-top: 1.5rem;
+}
+
+@supports (display: grid) {
+    .cards > ul {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+        grid-column-gap: 1.5rem;
+        grid-row-gap:1.5rem;
+    }
+
+    .card + .card {
+        margin-top: 0;
+    }
+}
+
+.card {
+    border-radius: 0.25rem;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    word-wrap: normal;
+}
+
+.card .text {
+    padding-left: .5rem;
+    flex: 1 0 auto;
+    display: flex;
+    flex-flow: column nowrap;
+    font-size: 1rem;
+}
+
+/* .card p {
+    max-width: 60ch;
+} */
+
+.card .img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* filter: grayscale(100%); */
+}
+
+.card a {
+    text-decoration: none;
+}
+
+.card a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.card a:focus {
+    outline: none;
+    text-decoration: underline;
+}
+
+.card:focus-within a:focus {
+    text-decoration: none;
+}
+
+.card small {
+    display: block;
+}
+
+.card .text > * + * {
+    margin-top: 0.75rem;
+}
+
+/* .card .text > :last-child {
+    margin-top: auto;
+    padding-top: 0.75rem;
+}  */
+
+.navbar-item:hover {
+    background-color: #035d7b41 !important;
+}
+
+.tags {
+    /* margin-bottom: .15rem; */
+    max-height: 60px;
+}
+
+/* .tags:not(:last-child) {
+    margin-bottom: 0;
+} */
+
+dt {
+    margin-right: .5rem;
+}
+dd {
+    margin-right: 0;
+}
+
+p {
+    margin: 3rem;
+}
+
+footer {
+    padding: 3rem 1.5rem 6rem;
+    margin-top: auto;
+    /* position: absolute; */
+}
+
+form {
+    margin: 1rem;
+    padding: 2rem;
+    box-shadow: 1px 4px 41px -18px rgba(30,56,136,1);
+    -webkit-box-shadow: 1px 4px 41px -18px rgba(30,56,136,1);
+    -moz-box-shadow: 1px 4px 41px -18px rgba(30,56,136,1);
+    border-radius: 1rem;
+}
+
+.navbar {
+    background-color: #158cba !important;
+}
+
+table {
+    margin: 1rem;
+    padding: 2rem;
+    box-shadow: 1px 4px 30px -20px rgba(30,56,136,1);
+    -webkit-box-shadow: 1px 4px 30px -20px rgba(30,56,136,1);
+    -moz-box-shadow: 1px 4px 30px -20px rgba(30,56,136,1);
+    border-radius: 1rem;
+}
+
+th, td {
+    padding: 1rem;
+}
+
