--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable+yes">
-  <title>{{ agency.name }} 2therescue</title>
+  <title>2therescue</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
   <link rel="stylesheet" href="{% static 'css/index.css' %}" />
@@ -18,11 +18,16 @@
   <a class="navbar-item" href="{% url 'list_pets' %}"><h1>{{ agency.name }}</h1></a>
   </div>
   <div class="navbar-menu">
+    <div class="navbar-start">
+        <a class="navbar-item" href="{% url 'list_pets' %}" >Available Pets</a>
+        <a class="navbar-item" href="{% url 'agency_detail' %}" >About Us</a>
+    </div>
     <div class="navbar-end">
-    <ul class="list-unstyled list-inline">
-      <li class="list-inline-item"><a class="navbar-item" href="{% url 'list_pets' %}" >Available Pets</a></li>
-      <li class="list-inline-item"><a class="navbar-item" href="{% url 'agency_detail' %}" >About Us</a></li>
-      </ul></div>
+      {% if request.user.is_authenticated %}
+        <ul class="list-unstyled list-inline">
+          <li class="list-inline-item"><a class="navbar-item" href="{% url 'home' %}" ><i class="fas fa-tools"></i>Manage Site</a></li>|
+          <li class="list-inline-item"><a class="navbar-item" href="/accounts/logout/"><i class="fas fa-door-open"></i><span style="color: transparent; font-size: .01px;">L</span>ogout</a></li></ul>
+        {% else %}{% endif %}</div>
     </div>
   </nav>
     </header>
@@ -30,11 +35,16 @@
     {% block content %}{% endblock content %}
   </div>
 
-  <footer class="footer mt-auto d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
+  <footer class="footer is-fixed-bottom d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
     <ul class="list-unstyled">
         <li><i class="fas fa-paw"></i>{{ agency.name }}</li>
         <li><i class="fas fa-paw"></i>{{ agency.phone }}</li>
       </ul>
+      <div id="social-media-links">
+      <a href={{ agency.facebook_url }}><i class="fab fa-facebook"></i></a>
+      <a href={{ agency.instagram_url }}><i class="fab fa-instagram"></i></a>
+      <a href={{ agency.twitter_url }}><i class="fab fa-twitter-square"></i></a>
+    </div>
       </footer>
     
     <script src="{% static 'js/index-bundle.js' %}"></script>
