--- a/templates/staff_base.html
+++ b/templates/staff_base.html
@@ -6,17 +6,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ agency.name }} 2therescue</title>
-  <link rel="stylesheet" href="{% static 'css/index.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/staff.css' %}" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'fontawesome/css/all.css' %}" />
 </head>
 <body>
-  <header class="border-bottom">
-    <nav class="navbar has-shadow is spaced" role="navigation" aria-label="main navigation">
+  <header class="border-bottom header">
+    <nav class="navbar has-shadow is-spaced is-info" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-      <a class="navbar-item" href="{% url 'home' %}">
-        <h1 class="title">{{ agency.name }} </h1>
+      <a class="navbar-item" href="{% url 'home' %}"><h1>{{ agency.name }}</h1>
       </a>
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
         <span aria-hidden="true"></span>
@@ -26,17 +25,14 @@
     </div>
     <div id="navMenu" class="navbar-menu">
       <div class="navbar-start">
-       <ul class="list-unstyled list-inline">
-        <li class="list-inline-item"><a class="navbar-item" href="{% url 'pet_list' %}" >Pets</a></li>
-        <li class="list-inline-item"><a class="navbar-item" href="{% url 'applications' %}" >Applications</a></li>
-        <li class="list-inline-item"><a class="navbar-item" href="{% url 'agency' %}" >Rescue info</a></li>
-        </ul> 
+      <a class="navbar-item" href="{% url 'pet_list' %}" >Pets</a>
+      <a class="navbar-item" href="{% url 'applications' %}" >Applications</a>
+      <a class="navbar-item" href="{% url 'agency' %}" >Rescue info</a>
       </div>
       <div class="navbar-end">
         {% if request.user.is_authenticated %}
-        <ul class="list-unstyled list-inline">
-          <li class="list-inline-item"><a class="navbar-item" href="{% url 'list_pets' %}" >Preview Site </a></li>|
-          <li class="list-inline-item"><a class="navbar-item" href="/accounts/logout/"> Logout</a></li></ul>
+      <a class="navbar-item " href="{% url 'list_pets' %}" ><i class="fas fa-glasses white"></i>Preview Site</a>|
+      <a class="navbar-item" href="/accounts/logout/"><i class="fas fa-door-open"></i>og out</a>
         {% else %}
         <a class="navbar-item" href="/accounts/login/">Login</a>
         {% endif %}
@@ -47,7 +43,7 @@
   <div class="container">
     {% block content %}{% endblock content %}
   </div>
-  <footer class="footer mt-auto d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
     <h2 class="subtitle">2TheRescue!</h2>
     <script src="{% static 'js/index-bundle.js' %}"></script>
   </body>
