--- a/static/css/index.css
+++ b/static/css/index.css
@@ -76,7 +76,7 @@ header a {
     max-height: auto;
 }
 
-.button {
+/* .button {
 	box-shadow: 0px 10px 14px -7px #276873;
 	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
 	background-color:#599bb3;
@@ -90,7 +90,7 @@ header a {
 	padding:13px 32px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #3d768a;
-}
+} */
 /* 
 .button {
     background-color: #fff;
@@ -252,7 +252,7 @@ footer {
     /* position: absolute; */
 }
 
-form {
+.application {
     margin: 1rem;
     padding: 2rem;
     box-shadow: 1px 4px 41px -18px rgba(30,56,136,1);
@@ -264,3 +264,9 @@ form {
 /* .navbar {
     background-color: #158cba !important;
 } */
+
+.button {
+    background-color: #158cba;
+    color: white;
+    text-decoration: none;
+}
