--- a/static/css/staff.css
+++ b/static/css/staff.css
@@ -267,15 +267,35 @@ form {
 }
 
 table {
-    margin: 1rem;
-    padding: 2rem;
+    margin: 3rem;
+    padding: 3rem;
     box-shadow: 1px 4px 30px -20px rgba(30,56,136,1);
     -webkit-box-shadow: 1px 4px 30px -20px rgba(30,56,136,1);
     -moz-box-shadow: 1px 4px 30px -20px rgba(30,56,136,1);
     border-radius: 1rem;
 }
 
-th, td {
-    padding: 1rem;
+td {
+    padding: auto 1rem;
 }
 
+.open {
+    color: #158cba;
+    padding: .25rem;
+    font-size: 2rem;
+}
+.pending {
+    color: #001966;
+    padding: .25rem;
+    font-size: 2rem;
+}
+.approved {
+    color: #3DB39F;
+    padding: .25rem;
+    font-size: 2rem;
+}
+.denied {
+    color: #e83055;
+    padding: .25rem;
+    font-size: 2rem;
+}
